--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="google" value="notranslate">
-  <title>PhotoTest</title>
+  <title>PhotoTest11</title>
   
   </script>
   
