--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     <li class="flex-item"><div class="side-a">79</div><div class="side-b"> 79 back</div></li>
   </ul>
 
-  <script src="http://code.jquery.com/jquery-1.11.2.min.js"></script>
+  <script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
   
     
   <script>
