--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta name="google" value="notranslate">
   <title>PhotoTest11</title>
   
-  </script>
-  
+  <script src="//code.jquery.com/jquery-3.3.1.min.js"></script>
+  <!--   <script src="https://code.jquery.com/jquery-1.11.2.min.js"></script> -->
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body onload="_l='t';">
@@ -97,8 +97,6 @@
     <li class="flex-item"><div class="side-a">78</div><div class="side-b"> 78 back</div></li>
     <li class="flex-item"><div class="side-a">79</div><div class="side-b"> 79 back</div></li>
   </ul>
-
-  <script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
   
     
   <script>
