--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta name="google" value="notranslate">
   <title>PhotoTest11</title>
   
-  <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
   <!--   <script src="https://code.jquery.com/jquery-1.11.2.min.js"></script> -->
+  <script src="jquery.min.js"></script>
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body onload="_l='t';">
